Got projection & view matrices working with camera

--- a/5607-Final.vcxproj
+++ b/5607-Final.vcxproj
@@ -155,7 +155,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DisplayManager.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="glad\glad.c" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ModelLoader.cpp" />
@@ -167,7 +169,9 @@
     <ClCompile Include="TexturedModel.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="DisplayManager.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="glad\glad.h" />
     <ClInclude Include="glad\khrplatform.h" />
     <ClInclude Include="ModelLoader.h" />
