--- a/5607-Final.vcxproj.filters
+++ b/5607-Final.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Source Files\entities</Filter>
     </ClCompile>
+    <ClCompile Include="OBJLoader.cpp">
+      <Filter>Source Files\models</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RawModel.h">
@@ -127,6 +130,9 @@
     </ClInclude>
     <ClInclude Include="Camera.h">
       <Filter>Header Files\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="OBJLoader.h">
+      <Filter>Header Files\models</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
