--- a/5607-Final.vcxproj.filters
+++ b/5607-Final.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="OBJLoader.cpp">
       <Filter>Source Files\models</Filter>
     </ClCompile>
+    <ClCompile Include="Light.cpp">
+      <Filter>Source Files\entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RawModel.h">
@@ -133,6 +136,9 @@
     </ClInclude>
     <ClInclude Include="OBJLoader.h">
       <Filter>Header Files\models</Filter>
+    </ClInclude>
+    <ClInclude Include="Light.h">
+      <Filter>Header Files\entities</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
