--- a/5607-Final.vcxproj
+++ b/5607-Final.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="glad\glad.c" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MasterRenderer.cpp" />
     <ClCompile Include="ModelLoader.cpp" />
     <ClCompile Include="ModelTexture.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
@@ -177,6 +178,7 @@
     <ClInclude Include="glad\glad.h" />
     <ClInclude Include="glad\khrplatform.h" />
     <ClInclude Include="Light.h" />
+    <ClInclude Include="MasterRenderer.h" />
     <ClInclude Include="ModelLoader.h" />
     <ClInclude Include="ModelTexture.h" />
     <ClInclude Include="OBJLoader.h" />
