--- a/5607-Final.vcxproj.filters
+++ b/5607-Final.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="Light.cpp">
       <Filter>Source Files\entities</Filter>
     </ClCompile>
+    <ClCompile Include="MasterRenderer.cpp">
+      <Filter>Source Files\render</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RawModel.h">
@@ -139,6 +142,9 @@
     </ClInclude>
     <ClInclude Include="Light.h">
       <Filter>Header Files\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="MasterRenderer.h">
+      <Filter>Header Files\render</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
