--- a/5607-Final.vcxproj
+++ b/5607-Final.vcxproj
@@ -204,6 +204,8 @@
     <None Include="entityVertexShader.txt" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="models\grassTexture.jpg" />
+    <Image Include="models\grassTexture.png" />
     <Image Include="textures\container.jpg" />
     <Image Include="textures\grass.jpg" />
   </ItemGroup>
